# RITC2025

./: .gitignore  ALGODataFetcher.py  README.md  config.ini  main.py  pyproject.toml  requirements.txt  utils.py
ALGO/: ALGOStrategy.py  ArbitrageStrategy.py
RITC/: __init__.py  params_algotrading.csv
RITC/base/: NewsBook.py  OrderBook.py  Portfolio.py
RITC/datafetcher/: ClientDataFetcher.py
base/: ApiTrading.py  VolAnalysis.py
